# Super-PILOT

./: # Code Citations.md  .coverage  .editorconfig  .gitignore  .pre-commit-config.yaml  ADVANCED_IDE_SUMMARY.md  AI_ML_INTEGRATION_GUIDE.md  A_COMMAND_FIX.md  Build-Windows.ps1  CHANGELOG.md  COMPLETE_PHASES_1_5.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  GAME_DEVELOPMENT_GUIDE.md  GAME_DEVELOPMENT_README.md  GRAPHICS_FIX_SUMMARY.txt  IOT_ROBOTICS_GUIDE.md  LICENSE.txt  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_COMPLETE.md  PHASE5_SUMMARY.md  PHASES_1_2_3_COMPLETE.md  PROJECT_ANALYSIS_REPORT.md  PROJECT_STRUCTURE.md  QUICK_START_ARCH.md  README-Windows.md  README.md  REBRANDING_SUMMARY.md  REBRANDING_VALIDATION.md  RUST_UNIFICATION_PLAN.md  RealTimeSyntaxChecker.py  SuperPILOT.archive  SuperPILOT.py  Super_PILOT.py  TESTING.md  TESTING_SUMMARY.md  TEST_RESULTS.md  TUTORIALS_AND_EXAMPLES.md  (+74 more)
.github/: copilot-instructions.md
.github/workflows/: ci.yml  python-tests.yml
.mypy_cache/3.11/: Time_Warp.data.json  Time_Warp.meta.json  __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _io.data.json  _io.meta.json  _operator.data.json  _operator.meta.json  _pickle.data.json  _pickle.meta.json  _queue.meta.json  _random.data.json  _random.meta.json  _sitebuiltins.meta.json  _socket.data.json  _socket.meta.json  _ssl.data.json  _ssl.meta.json  (+135 more)
.superpilot_recovery/: autosave.json  autosave.spt
.templecode_recovery/: autosave.json  autosave.spt
Demos/: README.md  complete_demo.spt  educational_concepts_demo.spt
Time_Warp_DOS/: README.md
Time_Warp_II/: Cargo.toml
Time_Warp_II/src/: error.rs  main.rs
Time_Warp_II/src/languages/basic/: ast.rs  interpreter.rs  mod.rs  parser.rs  tokenizer.rs
Time_Warp_Python/: DESKTOP_QUICKSTART.md  GUI_IMPLEMENTATION_STATUS.md  IMPLEMENTATION_COMPLETE.md  PROJECT_COMPLETE.md  PYTHON_PORT_STATUS.md  QUICKSTART.md  README.md  TEMPLECODE_IMPLEMENTATION.md  VERIFICATION_REPORT.md  run_time_warp.py  setup.py  test_all_turtle_commands.py  test_ide.py  time_warp_ide.py
Time_Warp_Python/time_warp/: __init__.py
Time_Warp_Rust/: Cargo.toml  README.md
Time_Warp_Rust/assets/: README.md
Time_Warp_Rust/src/: app.rs  interpreter.rs  main.rs
Time_Warp_Rust/tests/: comprehensive_test.rs  edge_case_tests.rs  integration_tests.rs
Time_Warp_Web/: README.md
Time_Warp_Windows/: README.md
archive/: SuperPILOT.archive  SuperPILOT.py  pilot.py.bak
archive/old_docs/: ADVANCED_IDE_SUMMARY.md  AI_ML_INTEGRATION_GUIDE.md  GAME_DEVELOPMENT_GUIDE.md  IOT_ROBOTICS_GUIDE.md  TESTING_SUMMARY.md  USER_GUIDE.md
assets/: generate_icons.py
core/: __init__.py  async_support.py  engine.py  engine.py.backup  interpreter.py  plugin_system.py  safe_expression_evaluator.py
core/interpreters/: __init__.py  basic.py  logo.py  pilot.py
docs/: CONTRIBUTING.md  DEVELOPER_HANDBOOK.md  DOCUMENTATION_SUMMARY.md  LESSON_PLANS.md  README.md  STUDENT_GUIDE.md  TEACHER_GUIDE.md  TECHNICAL_REFERENCE.md  UI_FRAMEWORK_COMPARISON.md  USER_GUIDE.md  api_reference.rst  conf.py  examples.rst  getting_started.rst  index.rst  language_reference.rst  troubleshooting.rst  tutorials.rst  user_guide.rst
examples/: Logo.spt  README.md  advanced_basic_graphics.spt  advanced_logo_art_tutorial.spt  advanced_logo_graphics.spt  advanced_pilot_calculator.spt  basic_example.spt  basic_fundamentals_tutorial.spt  comprehensive_demo.spt  educational_math_quiz.spt  game_development_tutorial.spt  interactive_tutorial_system.spt  logo_example.spt  logo_graphics_demo.spt  logo_graphics_tutorial.spt  mixed_language_art.spt  mixed_language_tutorial.spt  number_guessing_game.spt  pilot_basics_tutorial.spt  pilot_example.spt
installer/: templecode_installer.nsi
plugins/: README.md  __init__.py
plugins/sample_integration_plugin/: plugin.json  sample_integration_plugin.py
plugins/sample_language_plugin/: plugin.json  sample_language_plugin.py
plugins/sample_tool_plugin/: plugin.json  sample_tool_plugin.py
plugins/sample_ui_plugin/: plugin.json  sample_ui_plugin.py
sample_programs/: README.md
sample_programs/games/: game_basic_demo.bas  game_physics_demo.spt  game_platformer_demo.spt  game_pong_demo.spt
sample_programs/hardware/: hardware_demo.spt  iot_robotics_demo.spt
sample_programs/ml/: ml_clustering.spt  ml_linear_regression.spt
sample_programs/pilot/: Square.pil  for.spt  test_age_checker.spt  test_clean_output.spt  test_clean_syntax.spt  test_ml_integration.spt  (+5 more)
src/: app.rs  lib.rs  main.rs
superpilot/: __init__.py
test_reports/: test_report.html
tests/: edge_case_tests.rs  integration_tests.rs  test_all_commands.py  test_all_commands_comprehensive.py  test_api_surface.py  test_commands_full.py  test_comprehensive_integration.py  test_core_interpreter.py  test_edgecases.py  test_error_handling.py  test_event_callbacks.py  test_every_command.py  test_exhaustive.py  test_exhaustive_commands.py  test_gwbasic_core.py  test_hardware_integration.py  test_ide_smoke.py  test_interpreter.py  test_interpreter_comprehensive.py  test_iot_robotics.py  test_logo_graphics.py  test_logo_macros_and_repeat.py  test_match_jump_semantics.py  test_math_and_if.py  test_modern_ui.py  test_numeric_and_logic_flow.py  test_performance.py  test_regression_demo_flow.py  test_security.py  test_templecode_integration.py  test_threading.py
time_warp_ide.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
time_warp_unified/: Cargo.toml  IMPLEMENTATION_STATUS.md  README.md
tools/: bench_commands.py  code_library.py  icon_factory.py  theme.py
ui/: base.py  qt_ui.py
(+460 files in other folders)
